--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       src: url('%PUBLIC_URL%/SourceHanSansSC-Regular.otf');
     }
   </style>
+<!--  <script src="%PUBLIC_URL%/lib/antd-with-locales.min.js"></script>-->
 </head>
 <body>
 <noscript>
