--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       font-family: 'Source Han Sans SC';
       src: url('%PUBLIC_URL%/SourceHanSansSC-Regular.otf');
     }
+    .many{
+         width: 1300px;
+    }
   </style>
 <!--  <script src="%PUBLIC_URL%/lib/antd-with-locales.min.js"></script>-->
 </head>
